--- a/frontend/src/Components/NotesPageComponent/UserSpace/NotesDisplayArea/NotesDisplayArea.css
+++ b/frontend/src/Components/NotesPageComponent/UserSpace/NotesDisplayArea/NotesDisplayArea.css
@@ -1,7 +1,7 @@
 .notes-disp-container {
 	display: flex;
-	justify-content: start;
-	align-items: start;
+	justify-content: flex-start;
+	align-items: flex-start;
 	height: 100%;
 	width: 100%;
 	background-color: #ffc7c7;
